unpackaged/main/default/objects/Ticket_Option__c/Ticket_Option__c.object-meta.xml
<CustomObject>
    <label>Ticket Option</label>
    <nameField>
        <displayFormat>T-{0}</displayFormat>
        <label>Ticket Option #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>