unpackaged/main/default/objects/Ticket_Option__c/fields/Email_Text__c.field-meta.xml
<CustomField>
    <fullName>Email_Text__c</fullName>
    <formula>TEXT(Number_of_Tickets__c)  &amp; ' Tickets, ' &amp; 'Section ' &amp; Section__c &amp; ' Row ' &amp; Row__c &amp; ', @ ' &amp;

Price_Per_Ticket_Format__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Text</label>
    <type>Text</type>
</CustomField>