unpackaged/main/default/objects/Ticket_Option__c/fields/Location_Note__c.field-meta.xml
<CustomField>
    <fullName>Location_Note__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Executive Lounge, Chairman's Club, etc.</inlineHelpText>
    <label>Location Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>