unpackaged/main/default/objects/Ticket_Option__c/fields/Logbook__c.field-meta.xml
<CustomField>
    <fullName>Logbook__c</fullName>
    <label>Logbook</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Ticket Options</relationshipLabel>
    <relationshipName>Ticket_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>