unpackaged/main/default/objects/Ticket_Option__c/fields/Markup_Price_Per_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Markup_Price_Per_Ticket__c</fullName>
    <inlineHelpText>This price is printed on the email</inlineHelpText>
    <label>Markup Price Per Ticket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>