unpackaged/main/default/objects/Ticket_Option__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>