unpackaged/main/default/objects/Ticket_Option__c/fields/Number_of_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tickets__c</fullName>
    <label>Number of Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>