unpackaged/main/default/objects/Ticket_Option__c/fields/Other_Currency__c.field-meta.xml
<CustomField>
    <fullName>Other_Currency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>