unpackaged/main/default/objects/Ticket_Option__c/fields/Package_Pass_Details__c.field-meta.xml
<CustomField>
    <fullName>Package_Pass_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please remember to add bulleting for the email</inlineHelpText>
    <label>Package/Pass Details</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>