unpackaged/main/default/objects/Ticket_Option__c/fields/Package_Pass_Name__c.field-meta.xml
<CustomField>
    <fullName>Package_Pass_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Package/Pass Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>