unpackaged/main/default/objects/Ticket_Option__c/fields/Package_Pass_Name_UPPERCASE__c.field-meta.xml
<CustomField>
    <fullName>Package_Pass_Name_UPPERCASE__c</fullName>
    <formula>UPPER(Package_Pass_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package/Pass Name UPPERCASE</label>
    <type>Text</type>
</CustomField>