unpackaged/main/default/objects/Ticket_Option__c/fields/Row__c.field-meta.xml
<CustomField>
    <fullName>Row__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Row</label>
    <length>255</length>
    <type>Text</type>
</CustomField>