unpackaged/main/default/objects/Ticket_Option__c/fields/Seat_Location__c.field-meta.xml
<CustomField>
    <fullName>Seat_Location__c</fullName>
    <formula>Section__c  &amp; IF(!ISBLANK(Section__c) &amp;&amp; !ISBLANK(Row__c), ', ', '') &amp; Row__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seat Location</label>
    <type>Text</type>
</CustomField>