unpackaged/main/default/objects/Ticket_Option__c/fields/Vendor_Markup_Price_Per_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Markup_Price_Per_Ticket__c</fullName>
    <formula>IF(!ISBLANK(Vendor_Price_Per_Ticket__c), '$' &amp; TEXT(Vendor_Price_Per_Ticket__c), '$0') &amp; ' / ' &amp; IF(!ISBLANK(Markup_Price_Per_Ticket__c), '$' &amp; TEXT(Markup_Price_Per_Ticket__c), '$0')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor / Markup Price Per Ticket</label>
    <type>Text</type>
</CustomField>