unpackaged/main/default/objects/Ticket_Option__c/fields/Vendor_Price_Per_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Price_Per_Ticket__c</fullName>
    <label>Vendor Price Per Ticket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>