unpackaged/main/default/objects/Ticket_Option__c/recordTypes/Package_Pass.recordType-meta.xml
<RecordType>
    <fullName>Package_Pass</fullName>
    <active>true</active>
    <label>Package/Pass</label>
</RecordType>